added check for: TAB, region and world correctness check.