@@ -88,7 +88,23 @@ public abstract class AbstractCommand implements CommandExecutor, TabCompleter {
 
     private @NotNull List<String> filter(List<String> list, String @NotNull [] args) {
         String last = args[args.length - 1];
-        if(args.length - 1 != 0) return Collections.emptyList();
+        if(args.length - 1 != 0) {
+            String subCmdStr = args[0];
+            for(Method m : this.getClass().getDeclaredMethods()) {
+                if(m.isAnnotationPresent(SubCommand.class)) {
+                    SubCommand subCommand = m.getAnnotation(SubCommand.class);
+                    if(subCommand.name().equalsIgnoreCase(subCmdStr)
+                            || Arrays.stream(subCommand.aliases()).toList().contains(subCmdStr)) {
+                        try{
+                            return List.of(subCommand.tabArgs()[args.length - 2]);
+                        }catch (ArrayIndexOutOfBoundsException ex) {
+                            return Collections.emptyList();
+                        }
+                    }
+                }
+            }
+            return Collections.emptyList();
+        }
         List<String> result = new ArrayList<>();
         for(String arg : list) {
             if(arg.toLowerCase().startsWith(last.toLowerCase())) result.add(arg);
